--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<input type="submit" class="btn btn-success" ng-disabled="myForm.$invalid" ng-click="save(employee)" value="Save" />
 			</form>
 			</br>
-			
+			<div class="text-center" ng-if="suc" style="font-size: 27px;">Record Successfully Inserted</div>
 			<div class="table table-striped table-hover table-bordered">
                         <table class="table table-hover m-b-none">
                             <thead>
@@ -80,7 +80,7 @@
 var app = angular.module('formApp', ['ui.bootstrap']);
 
 app.controller('empcontroller', function($scope, $http, empservice) {
-
+$scope.suc = false;
 $scope.reset = function() {
             $scope.employee = "";
         };
@@ -138,7 +138,7 @@ $scope.save = function(emp) {
         empservice.getemployeewithpagination(payload).then(function(response){
         console.log("All Projects: ",response);
         $scope.employee = response["0"].data;
-	
+	$scope.suc = true;
     },function(error){
 
     });
