--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body ng-app="formApp" class="jumbotron">
 	 <div class="container-fluid">
 		<div ng-controller="empcontroller">
-
+		<div class="text-center" style="font-size: 27px;">Add Employee</div></br>
 			<form name="myForm" class="form-horizontal text-center" novalidate>
 				<div class="form-group">
 				 <label>Name : </label>
